# hng-xiv-be-1

./: Cargo.toml  Dockerfile  README.md
assets/: seed_profiles.json
migrations/: 20260417000000_create_profiles.sql  20260422000000_upgrade_profiles_schema.sql  20260422010000_set_profiles_uuid_v7_default.sql
src/: app.rs  db.rs  error.rs  external.rs  handlers.rs  main.rs  models.rs  state.rs  utils.rs
