[package]
name = "hng-xiv-be-1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
